# codeowners-diff

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  codeowners_diff.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build_publish.yaml  dependencies.yaml  tests.yaml
tests/: codeowners_diff_test.py  end_to_end_test.py
